test-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-webapp
  labels:
    app: gitops-webapp
  annotations: 
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: webapp.dev.minikube.local
    http:
      paths:
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: gitops-webapp-svc
            port:
              number: 8080
